@@ -2,7 +2,7 @@
 # AdminCustomerCompanyForm.dtl - provides HTML form for AdminCustomerCompany
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: AdminCustomerCompanyForm.dtl,v 1.9 2009-09-30 14:50:44 mb Exp $
+# $Id: AdminCustomerCompanyForm.dtl,v 1.10 2009-11-06 09:11:19 tt Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -104,7 +104,7 @@
             <form action="$Env{"CGIHandle"}" method="post">
                 <input type="hidden" name="Action" value="$Env{"Action"}"/>
                 <input type="hidden" name="Subaction" value="$QData{"Action"}Action"/>
-                <input type="hidden" name="CustomerCompanyID" value="$QData{"CustomerCompanyID"}"/>
+                <input type="hidden" name="CustomerCompanyID" value="$QData{"CustomerID"}"/>
                 <table width="100%" cellspacing="0" cellpadding="4">
                     <tr>
                         <td class="contenthead">
